# Goreliy-and-Morozov_webapp

./: README.md  docker-compose.yaml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/config/: celery.py  settings.py  swagger.py  urls.py
backend/portfolio/: admin.py  task.py
backend/portfolio/api/: urls.py
backend/portfolio/api/v1/: cases_api.py  podcast_api.py  serializers.py  urls.py
backend/portfolio/migrations/: 0001_initial.py
backend/portfolio/models/: cases.py  podcasts.py
backend/uwsgi/: uwsgi.ini
nginx/servers/: site.conf
telegram_bot/: Dockerfile  loader.py  main.py  pyproject.toml
telegram_bot/core/: config.py
telegram_bot/handlers/: start.py
telegram_bot/keyboards/: web_app.py
